--- a/homepage.html
+++ b/homepage.html
@@ -229,9 +229,20 @@
           </p>
         </div>
         <div class="welcome-section-left-col">
-          <div class="mint-btn-container fade-in">
+          <!-- mint btn container desktop -->
+          <div class="mint-btn-container mint-btn-container-desktop fade-in">
             <img
               src="./img/HOME PAGE/Mint Button Container.png"
+              alt=""
+              class="mint-btn-container-img"
+            />
+            <a href="#" class="btn mint-container-btn">mint coming soon</a>
+          </div>
+
+          <!-- mint btn container mobile -->
+          <div class="mint-btn-container mint-btn-container-mobile fade-in">
+            <img
+              src="./img/HOME PAGE/Mint Button Container_MOBILE.png"
               alt=""
               class="mint-btn-container-img"
             />
@@ -732,79 +743,79 @@
     <!-- utilities section start -->
     <section class="utilities" id="utilities">
       <div class="container utilities-section">
-        <div class="utilities-top">
-          <div class="utilities-top-text">
-            <h2 class="section-title utilities-top-text-title fade-in">
-              META TUNERS <br />
-              NFT UTILITIES
-            </h2>
-            <p class="utilities-top-desc fade-in">
-              As the battle against The Machine rages on, your Meta Tuner
-              Genesis NFTs will act as your membership token to the Resistance,
-              giving you access to unique rewards and experiences.
-            </p>
-          </div>
+        <div class="utilities-text">
+          <h2 class="section-title utilities-text-title fade-in">
+            META TUNERS <br />
+            NFT UTILITIES
+          </h2>
 
-          <img
-            src="./img/UTILITIES/KEY_Infinite_loop.gif"
-            alt=""
-            class="utilities-top-img fade-in"
-          />
-        </div>
+          <div class="utilities-main">
+            <!-- utility one -->
 
-        <div class="utilities-bottom">
-          <!-- utility one -->
-          <div class="utility utility-one fade-in">
-            <img src="./img/UTILITIES/Icon1.png" alt="" class="utility-icon" />
-            <h3 class="utility-title">1. Membership</h3>
-            <p class="utility-text">
-              As the battle against the Machine rages on, your Meta Tuner
-              Genesis NFTs will act as your membership token to the Resistance
-              and also gives you many aditional points of value.
-            </p>
-          </div>
+            <!-- utility one -->
+            <div class="utility utility-two fade-in">
+              <img
+                src="./img/UTILITIES/Icon2V2.png"
+                alt=""
+                class="utility-icon"
+              />
+              <h3 class="utility-title">2. Membership</h3>
+              <p class="utility-text">
+                Your Meta Tuner NFT is your digital key to accessing the Meta
+                Tuners universe and entering Hardrive City.
+              </p>
+            </div>
 
-          <!-- utility two -->
-          <div class="utility utility-two fade-in">
-            <img src="./img/UTILITIES/Icon2.png" alt="" class="utility-icon" />
-            <h3 class="utility-title">2. Usage</h3>
-            <p class="utility-text">
-              Your Meta Tuner NFT is your digital key to accessing the Meta
-              Tuners universe and entering Hardrive City.
-            </p>
-          </div>
+            <!-- utility two -->
+            <div class="utility utility-three fade-in">
+              <img
+                src="./img/UTILITIES/Icon3_V2.png"
+                alt=""
+                class="utility-icon"
+              />
+              <h3 class="utility-title">3. Ownership</h3>
+              <p class="utility-text">
+                Your unique NFT is 100% owned by you! All rights, artwork and
+                licensing can be utilized any way you see fit.
+              </p>
+            </div>
 
-          <!-- utility three -->
-          <div class="utility utility-three fade-in">
-            <img src="./img/UTILITIES/Icon3.png" alt="" class="utility-icon" />
-            <h3 class="utility-title">3. Ownership</h3>
-            <p class="utility-text">
-              Your unique NFT is 100% owned by you! All rights, artwork and
-              licensing can be utilized any way you see fit.
-            </p>
-          </div>
+            <!-- utility three -->
+            <div class="utility utility-four fade-in">
+              <img
+                src="./img/UTILITIES/Icon4_V2.png"
+                alt=""
+                class="utility-icon"
+              />
+              <h3 class="utility-title">4. Autoshop</h3>
+              <p class="utility-text">
+                Ownership gives you access to “The Auto Shop”. The Meta Tuners
+                official Web 3 digital marketplace
+              </p>
+            </div>
 
-          <!-- utility four -->
-          <div class="utility utility-four fade-in">
-            <img src="./img/UTILITIES/Icon4.png" alt="" class="utility-icon" />
-            <h3 class="utility-title">4. Autoshop</h3>
-            <p class="utility-text">
-              Ownership gives you access to “The Auto Shop”. The Meta Tuners
-              official Web 3 digital marketplace
-            </p>
-          </div>
-
-          <!-- utility five -->
-          <div class="utility utility-five fade-in">
-            <img src="./img/UTILITIES/Icon5.png" alt="" class="utility-icon" />
-            <h3 class="utility-title">5. Governance</h3>
-            <p class="utility-text">
-              Meta Tuners Genesis NFT owners have governance rights within the
-              DAO that will be coming in phase 3 over the Meta Tuners digital
-              land holdings.
-            </p>
+            <!-- utility four -->
+            <div class="utility utility-five fade-in">
+              <img
+                src="./img/UTILITIES/Icon5_V2.png"
+                alt=""
+                class="utility-icon"
+              />
+              <h3 class="utility-title">5. Governance</h3>
+              <p class="utility-text">
+                Meta Tuners Genesis NFT owners have governance rights within the
+                DAO that will be coming in phase 3 over the Meta Tuners digital
+                land holdings.
+              </p>
+            </div>
           </div>
         </div>
+
+        <img
+          src="./img/UTILITIES/Cropped KEY GIF.gif"
+          alt=""
+          class="utilities-gif-img fade-in"
+        />
       </div>
     </section>
     <!-- utilities section end -->
@@ -907,6 +918,19 @@
             <h3 class="member-name">CEZAR ARVELO</h3>
             <h4 class="member-role">Founder / Creator</h4>
             <p class="member-info">Likes anime, drawing and cars</p>
+
+            <!-- member links -->
+            <div class="member-links">
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-instagram member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-twitter member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-linkedin member-link-icon"></i>
+              </a>
+            </div>
           </div>
 
           <!-- member two -->
@@ -915,6 +939,18 @@
             <h3 class="member-name">JESSE PRINCE</h3>
             <h4 class="member-role">COO</h4>
             <p class="member-info">Army Vet and real estate tycoon</p>
+            <!-- member links -->
+            <div class="member-links">
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-instagram member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-twitter member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-linkedin member-link-icon"></i>
+              </a>
+            </div>
           </div>
 
           <!-- member three -->
@@ -923,6 +959,18 @@
             <h3 class="member-name">MIKE GENCO</h3>
             <h4 class="member-role">CMO</h4>
             <p class="member-info">Likes ideas and creating vibes</p>
+            <!-- member links -->
+            <div class="member-links">
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-instagram member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-twitter member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-linkedin member-link-icon"></i>
+              </a>
+            </div>
           </div>
 
           <!-- member four -->
@@ -931,6 +979,18 @@
             <h3 class="member-name">DYLAN McCLUNG</h3>
             <h4 class="member-role">Developer</h4>
             <p class="member-info">He’s our “tank” from the Matrix</p>
+            <!-- member links -->
+            <div class="member-links">
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-instagram member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-twitter member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-linkedin member-link-icon"></i>
+              </a>
+            </div>
           </div>
 
           <!-- member five -->
@@ -939,6 +999,18 @@
             <h3 class="member-name">PAT TUPA</h3>
             <h4 class="member-role">Project Manager</h4>
             <p class="member-info">A man of the people Pat puts the work in</p>
+            <!-- member links -->
+            <div class="member-links">
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-instagram member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-twitter member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-linkedin member-link-icon"></i>
+              </a>
+            </div>
           </div>
 
           <!-- member six -->
@@ -947,6 +1019,18 @@
             <h3 class="member-name">BRYAN RIVAS</h3>
             <h4 class="member-role">Interactive Manager</h4>
             <p class="member-info">Likes numbers, patterns and programs</p>
+            <!-- member links -->
+            <div class="member-links">
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-instagram member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-twitter member-link-icon"></i>
+              </a>
+              <a href="#" class="member-link">
+                <i class="fa-brands fa-linkedin member-link-icon"></i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -1036,9 +1120,6 @@
           <a href="#" class="contact-us-link contact-us-link-2">
             <i class="fa-regular fa-envelope email-icon"></i> Partnership
             Inquiries
-          </a>
-          <a href="#" class="contact-us-link contact-us-link-3">
-            <i class="fa-regular fa-envelope email-icon"></i> Jobs
           </a>
         </div>
       </div>
