--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     <!-- hero image start -->
     <main class="hero-section">
       <div class="container">
-        <img src="./img/SPLASH PAGE/Splash Page Main Image.jpg" alt="" />
+        <a href="./homepage.html">
+          <img src="./img/SPLASH PAGE/Splash Page Main Image.jpg" alt="" />
+        </a>
       </div>
     </main>
     <!-- hero image end -->
