--- a/homepage.html
+++ b/homepage.html
@@ -278,16 +278,10 @@
           the collection
         </h2>
         <p class="collection-desc fade-in">
-          The Meta Tuners Genesis collection features 80 unique car inspired PFP
-          characters. The 8,000 piece collection is algorithmically generated
-          and includes 400 hand-drawn vehicles from JDM, Euro, Muscle, Exotic
-          and more!
-
-          <br />
-          <br />
-          The Meta Tuners will be hosted on IPFS and live in an ERC 721-A
-          contract on the Ethereum blockchain. You can mint yours at a cost of
-          0.08 ETH!
+          Since the early 1980’s, the JDM Tuners were formed around the emerging
+          culture of drifting, modding, and street racing. Now, the tuners are
+          forced to operate undercover, as they illicitly mod tuners around the
+          world to stop The Machine.
         </p>
       </div>
 
@@ -830,8 +824,8 @@
       <div class="container roadmap-section">
         <h2 class="section-title roadmap-section-title fade-in">roadmap</h2>
         <p class="roadmap-desc fade-in">
-          upon completing the mint we will begin shifting out of first gear into
-          second and have a few other surprises for the community
+          Upon completing the mint we will begin shifting out of first gear into
+          second and have a few other surprises for the community.
         </p>
 
         <div class="steps">
@@ -917,7 +911,10 @@
             <img src="./img/TEAM/Cezar.png" alt="cezar" class="member-image" />
             <h3 class="member-name">CEZAR ARVELO</h3>
             <h4 class="member-role">Founder / Creator</h4>
-            <p class="member-info">Likes anime, drawing and cars</p>
+            <p class="member-info">
+              Car enthusiast, anime and cartoon connoisseur with over 10 years
+              of professional design and illustration experience.
+            </p>
 
             <!-- member links -->
             <div class="member-links">
@@ -938,7 +935,10 @@
             <img src="./img/TEAM/Jesse.png" alt="cezar" class="member-image" />
             <h3 class="member-name">JESSE PRINCE</h3>
             <h4 class="member-role">COO</h4>
-            <p class="member-info">Army Vet and real estate tycoon</p>
+            <p class="member-info">
+              Army Veteran, serial entrepreneur and Real Estate Tycoon with SEC
+              securities experience.
+            </p>
             <!-- member links -->
             <div class="member-links">
               <a href="#" class="member-link">
@@ -958,7 +958,10 @@
             <img src="./img/TEAM/Mike.png" alt="cezar" class="member-image" />
             <h3 class="member-name">MIKE GENCO</h3>
             <h4 class="member-role">CMO</h4>
-            <p class="member-info">Likes ideas and creating vibes</p>
+            <p class="member-info">
+              Vibes counselor, Web 3 shark with one ear to the streets and the
+              other in creative universes at all times.
+            </p>
             <!-- member links -->
             <div class="member-links">
               <a href="#" class="member-link">
@@ -977,8 +980,11 @@
           <div class="team-member team-member-four fade-in">
             <img src="./img/TEAM/Dylan.png" alt="cezar" class="member-image" />
             <h3 class="member-name">DYLAN McCLUNG</h3>
-            <h4 class="member-role">Developer</h4>
-            <p class="member-info">He’s our “tank” from the Matrix</p>
+            <h4 class="member-role">CTO</h4>
+            <p class="member-info">
+              Web 3 Senior Software Developer with expertise in finance. He’s
+              Our “Tank” From The Matrix.
+            </p>
             <!-- member links -->
             <div class="member-links">
               <a href="#" class="member-link">
@@ -998,7 +1004,10 @@
             <img src="./img/TEAM/PAT.png" alt="cezar" class="member-image" />
             <h3 class="member-name">PAT TUPA</h3>
             <h4 class="member-role">Project Manager</h4>
-            <p class="member-info">A man of the people Pat puts the work in</p>
+            <p class="member-info">
+              Decentralized finance guru with a background in Real Estate and
+              business development.
+            </p>
             <!-- member links -->
             <div class="member-links">
               <a href="#" class="member-link">
@@ -1018,7 +1027,10 @@
             <img src="./img/TEAM/Bryan.png" alt="Bryan" class="member-image" />
             <h3 class="member-name">BRYAN RIVAS</h3>
             <h4 class="member-role">Interactive Manager</h4>
-            <p class="member-info">Likes numbers, patterns and programs</p>
+            <p class="member-info">
+              Solutions architect with a passion for gaming, creative writing
+              and ideation.
+            </p>
             <!-- member links -->
             <div class="member-links">
               <a href="#" class="member-link">
@@ -1056,7 +1068,7 @@
       <div class="container gallery-section">
         <h2 class="section-title gallery-section-title fade-in">
           <!-- Tuner <span class="blue-clr">Art</span> -->
-          THE SHOWROOM (GALLERY)
+          THE SHOWROOM
         </h2>
 
         <div class="gallery-main fade-in">
