--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         </div>
 
         <p class="splash-desc">
-          Join the Meta Tuners and resist against The Machine’s efforts to
-          destroy tuner culture in Hardrive City. Secure your token and join the
-          ranks of the World’s First Car-Culture Inspired NFT Collection
+          Welcome to the world’s first car-culture inspired NFT collection. join
+          the Meta Tuners and resist against the Machine’s efforts to destroy
+          tuner culture In Hardrive City.
         </p>
       </div>
     </section>
