--- a/homepage.html
+++ b/homepage.html
@@ -278,10 +278,15 @@
           the collection
         </h2>
         <p class="collection-desc fade-in">
-          Since the early 1980’s, the JDM Tuners were formed around the emerging
-          culture of drifting, modding, and street racing. Now, the tuners are
-          forced to operate undercover, as they illicitly mod tuners around the
-          world to stop The Machine.
+          The Meta Tuners Genesis collection features 80 unique car inspired PFP
+          characters. The 8,000 piece collection is algorithmically generated
+          and includes 400 hand-drawn vehicles from JDM, Euro, Muscle, Exotic
+          and more!
+          <br />
+          <br />
+          The Meta Tuners will be hosted on IPFS and live in an ERC 721-A
+          contract on the Ethereum blockchain. You can mint yours at a cost of
+          0.08 ETH!
         </p>
       </div>
 
@@ -326,7 +331,7 @@
                 Since the early 1980’s, the JDM Tuners were formed around the
                 emerging culture of drifting, modding, and street racing. Now,
                 the tuners are forced to operate undercover, as they illicitly
-                mod tuners around the world to stop The Machine
+                mod tuners around the world to stop The Machine.
               </p>
               <h2 class="slider-item-info">Info</h2>
               <ul class="slider-item-links">
