--- a/homepage.html
+++ b/homepage.html
@@ -71,13 +71,13 @@
     <script src="./js/app.js" defer></script>
 
     <!-- tilt js -->
-    <script src="./js/vanilla-tilt.js" defer type="module"></script>
+    <script src="./js/vanilla-tilt.js" defer></script>
 
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
 
     <!-- slider js -->
-    <script src="./js/slider.js" type="module" defer></script>
+    <script src="./js/slider.js" defer></script>
 
     <!-- fade in -->
     <script src="./js/fadein.js" defer></script>
