--- a/homepage.html
+++ b/homepage.html
@@ -810,11 +810,11 @@
           </div>
         </div>
 
-        <img
+        <!-- <img
           src="./img/UTILITIES/Cropped KEY GIF.gif"
           alt=""
           class="utilities-gif-img fade-in"
-        />
+        /> -->
       </div>
     </section>
     <!-- utilities section end -->
