--- a/homepage.html
+++ b/homepage.html
@@ -61,11 +61,7 @@
     <link rel="stylesheet" href="./css/footer.css" />
 
     <!-- fav ico -->
-    <link
-      rel="shortcut icon"
-      href="./img/SPLASH PAGE/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./M_Fav.ico" type="image/x-icon" />
 
     <!--  navbar js -->
     <script src="./js/app.js" defer></script>
@@ -810,11 +806,11 @@
           </div>
         </div>
 
-        <!-- <img
+        <img
           src="./img/UTILITIES/Cropped KEY GIF.gif"
           alt=""
           class="utilities-gif-img fade-in"
-        /> -->
+        />
       </div>
     </section>
     <!-- utilities section end -->
