--- a/homepage.html
+++ b/homepage.html
@@ -61,7 +61,7 @@
     <link rel="stylesheet" href="./css/footer.css" />
 
     <!-- fav ico -->
-    <link rel="shortcut icon" href="./M_Fav.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/M_Fav.ico" type="image/x-icon" />
 
     <!--  navbar js -->
     <script src="./js/app.js" defer></script>
