--- a/homepage.html
+++ b/homepage.html
@@ -73,7 +73,7 @@
     <script src="./js/preLoader.js" defer></script>
 
     <!-- slider js -->
-    <script src="./js/slider.js" defer></script>
+    <script src="./js/slider2.js" defer></script>
 
     <!-- fade in -->
     <script src="./js/fadein.js" defer></script>
