--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MetaTuners</title>
-
     <!-- font awsome cdn -->
     <link
       rel="stylesheet"
@@ -14,32 +13,24 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
     <!-- franker font -->
     <link rel="stylesheet" href="./FONTS/FranckerW10/franckerW.css" />
-
     <!-- general stylesheet -->
     <link rel="stylesheet" href="./css/style.css" />
-
     <!-- nav splashscreen -->
     <link rel="stylesheet" href="./css/nav-splalshscreen.css" />
-
     <!-- splashscreen text-->
     <link rel="stylesheet" href="./css/splashscreen-text.css" />
-
     <!-- footer styles -->
     <link rel="stylesheet" href="./css/footer.css" />
-
     <!-- fav ico -->
     <link
       rel="shortcut icon"
       href="./img/SPLASH PAGE/favicon.ico"
       type="image/x-icon"
     />
-
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
-
     <!-- logo-animation js -->
     <script src="./js/logoAnimation.js" defer></script>
   </head>
@@ -53,7 +44,6 @@
           class="logo"
         />
       </div>
-
       <div class="social-links container">
         <a href="#" class="social-link">
           <i class="fa-brands fa-youtube"></i>
@@ -70,7 +60,6 @@
       </div>
     </nav>
     <!-- splash screen navbar end -->
-
     <!-- hero image start -->
     <main class="hero-section">
       <div class="container">
@@ -80,12 +69,10 @@
       </div>
     </main>
     <!-- hero image end -->
-
-    <!-- splash screen text section start  -->
+    <!-- splash screen text section start -->
     <section class="splash-text">
       <div class="container splash-text-section">
         <a href="./homepage.html" class="splash-enter">ENTER</a>
-
         <div class="splash-text-img">
           <img
             src="./img/SPLASH PAGE/splash-text-img.webp"
@@ -93,7 +80,6 @@
             class="splash-text-img"
           />
         </div>
-
         <p class="splash-desc">
           Welcome to the world’s first car-culture inspired NFT collection. join
           the Meta Tuners and resist against the Machine’s efforts to destroy
@@ -102,7 +88,6 @@
       </div>
     </section>
     <!-- splash screen text section end -->
-
     <!-- footer start -->
     <footer>
       <div class="footer container">
@@ -113,7 +98,6 @@
             alt=""
           />
         </div>
-
         <div class="footer-right-col">
           <div class="social-links-footer">
             <a href="#" class="social-link-footer">
@@ -129,17 +113,14 @@
               <i class="fa-brands fa-twitter"></i>
             </a>
           </div>
-
           <p class="footer-text">
-            <a href="#"> METATUNERS LLC </a>
-            <br />
+            <a href="#"> METATUNERS LLC </a> <br />
             <a href="#"> Metatuners Terms & Conditions </a>
           </p>
         </div>
       </div>
     </footer>
     <!-- footer end -->
-
     <!-- preloader -->
     <div id="preloader">
       <img src="./img/gliched-logo.gif" alt="" class="preloader-img" />
