--- a/homepage.html
+++ b/homepage.html
@@ -52,7 +52,7 @@
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
     <!-- slider js -->
-    <script src="./js/slider2.js" defer></script>
+    <script src="./js/slider.js" defer></script>
     <!-- fade in -->
     <script src="./js/fadein.js" defer></script>
   </head>
