--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
     <!-- footer styles -->
     <link rel="stylesheet" href="./css/footer.css" />
     <!-- fav ico -->
-    <link
-      rel="shortcut icon"
-      href="./img/SPLASH PAGE/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./img/M_Fav.ico" type="image/x-icon" />
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
     <!-- logo-animation js -->
